fix(admin): scrolling on small heights

--- a/src/app/modules/admin/pages/folder-page/folders/admin-folder-folders.component.scss
+++ b/src/app/modules/admin/pages/folder-page/folders/admin-folder-folders.component.scss
@@ -9,12 +9,18 @@
 	.folders {
 		display: flex;
 		flex-direction: column;
+		height: 100%;
+		width: 100%;
 
 		.actions {
 			padding: $padding-sm $padding;
 			border-bottom-color: var(--background-border);
 			border-bottom-width: 1px;
 			border-bottom-style: solid;
+		}
+
+		app-admin-folder-list {
+			overflow-y: auto;
 		}
 
 	}
