--- a/src/app/modules/admin/pages/folder-page/health/admin-folder-health.component.scss
+++ b/src/app/modules/admin/pages/folder-page/health/admin-folder-health.component.scss
@@ -5,6 +5,8 @@
 	width: 100%;
 
 	.health {
+		height: 100%;
+		width: 100%;
 		display: flex;
 		flex-direction: column;
 
@@ -15,7 +17,7 @@
 			border-bottom-style: solid;
 		}
 
-		.content {
+		.health-content {
 			padding: $padding;
 			overflow-y: auto;
 			overflow-x: auto;
