--- a/src/app/modules/admin/pages/folder-page/overview/admin-folder-overview.component.scss
+++ b/src/app/modules/admin/pages/folder-page/overview/admin-folder-overview.component.scss
@@ -9,6 +9,7 @@
 	.folder {
 		display: flex;
 		flex-direction: column;
+		height: 100%;
 		width: 100%;
 
 		.actions {
