--- a/src/app/modules/admin/pages/folder-page/tracks-health/admin-tracks-health.component.scss
+++ b/src/app/modules/admin/pages/folder-page/tracks-health/admin-tracks-health.component.scss
@@ -5,6 +5,8 @@
 	width: 100%;
 
 	.health {
+		height: 100%;
+		width: 100%;
 		display: flex;
 		flex-direction: column;
 
